--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typescript-action",
-  "version": "0.0.0",
+  "name": "deny-not-updated-branch",
+  "version": "1.0.0",
+  "description": "GitHub action to abort job if the branch is not up to date with the target branch",
   "private": true,
-  "description": "TypeScript template action",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -10,12 +10,11 @@
     "format-check": "prettier --check **/*.ts",
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
-    "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "all": "npm run build && npm run format && npm run lint && npm run package"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/guyarb/deny-not-updated-branch.git"
   },
   "keywords": [
     "actions",
@@ -25,21 +24,22 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.6"
+    "@actions/core": "^1.2.6",
+    "@actions/github": "^4.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.10",
     "@types/node": "^14.10.0",
     "@typescript-eslint/parser": "^3.10.1",
     "@vercel/ncc": "^0.23.0",
     "eslint": "^7.8.1",
     "eslint-plugin-github": "^4.1.1",
     "eslint-plugin-jest": "^23.20.0",
-    "jest": "^24.9.0",
-    "jest-circus": "^26.4.2",
     "js-yaml": "^3.14.0",
     "prettier": "2.1.1",
-    "ts-jest": "^24.3.0",
     "typescript": "^4.0.2"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/guyarb/deny-not-updated-branch/issues"
+  },
+  "homepage": "https://github.com/guyarb/deny-not-updated-branch#readme"
 }
