--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: guyarb/deny-not-updated-branch@v1.0.0
       - uses: actions/checkout@v2
       - run: |
           npm install
