--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,9 +10,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: technote-space/auto-cancel-redundant-workflow@v1
+
       - uses: guyarb/deny-not-updated-branch@v1.0.0
+
       - uses: actions/checkout@v2
+
+      - uses: actions/cache@v2
+        id: restore-cache-frontend
+        with:
+          path: node_modules
+          key: deny-not-updated-branch-node-${{ hashFiles('package-lock.json') }}
+
       - run: |
           npm install
+
       - run: |
           npm run all
